# piwebwm

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  go.mod  handlers.go  main.go
backend/host-client/: client.go
backend/mock-host-agent/: Dockerfile  go.mod  main.go
frontend/: app.js  index.html  jsconfig.json  package.json  style.css  vite.config.js
frontend-legacy/: index.html  style.css
frontend-legacy/css/: context-menu.css
frontend-legacy/js/core/: DragDropManager.js
frontend-new/: vite.config.js
frontend-new/src/: main.js
frontend-new/src/apps/: FileExplorer.js
frontend-new/src/components/: PropertiesDialog.js  StartMenu.js
frontend-new/src/core/: AppManager.js  AppRegistry.js  StateManager.js  Store.js  WindowManager.js
frontend-new/src/styles/: global.css  startMenu.css
frontend-new/src/utils/: Icons.js
frontend/.docker/: Dockerfile.dev
frontend/css/: apps.css
frontend/js/: app.js
frontend/js/apps/: FileExplorer.js
frontend/js/components/: ContextMenu.js  PropertiesDialog.js  StartMenu.js  TaskBar.js
frontend/js/core/: DragDropManager.js  StateManager.js  WindowManager.js
frontend/js/utils/: Icons.js
frontend/src/: main.js  style.css
frontend/src/components/: Clock.js  PropertiesDialog.js  StartMenu.js  TaskBar.js
frontend/src/core/: AppManager.js  DragDropManager.js  EventBus.js  (+2 more)
host-agent/: .gitignore  Cargo.toml  config.yaml
host-agent/src/: config.rs  error.rs  main.rs  protocol.rs  server.rs
host-agent/src/handlers/: files.rs  mod.rs
host-agent/src/security/: mod.rs  validator.rs
(+36 files in other folders)
