[package]
name = "host-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

nix = { version = "0.27", features = ["socket", "user"] }

sysinfo = "0.30"

log = "0.4"
env_logger = "0.11"

anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4.42"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true